@@ -36,13 +36,13 @@ import com.github.dreamhead.moco.resource.ContentResource;
 import com.github.dreamhead.moco.resource.Resource;
 import com.github.dreamhead.moco.resource.reader.ExtractorVariable;
 
+import com.github.dreamhead.moco.util.HttpHeaders;
 import com.github.dreamhead.moco.util.Jsons;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.net.HttpHeaders;
 
 import java.io.InputStream;
 import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.function.Predicate;
@@ -63,77 +63,77 @@ import static com.github.dreamhead.moco.resource.ResourceFactory.uriResource;
 import static com.github.dreamhead.moco.resource.ResourceFactory.versionResource;
 import static com.github.dreamhead.moco.resource.ResourceFactory.xmlResource;
 import static com.github.dreamhead.moco.resource.reader.TemplateResourceReader.checkValidVariableName;
+import static com.github.dreamhead.moco.util.HttpHeaders.SET_COOKIE;
 import static com.github.dreamhead.moco.util.Iterables.asIterable;
+import static com.github.dreamhead.moco.util.Preconditions.checkArgument;
 import static com.github.dreamhead.moco.util.Preconditions.checkNotNullOrEmpty;
 import static com.github.dreamhead.moco.util.URLs.toUrlFunction;
-import static com.google.common.base.Preconditions.checkArgument;
-import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.net.HttpHeaders.SET_COOKIE;
+import static java.util.Objects.requireNonNull;
 
 public final class Moco {
     public static HttpServer httpServer(final int port, final MocoConfig<?>... configs) {
         checkArgument(port > 0, "Port must be greater than zero");
-        return ActualHttpServer.createQuietServer(port, checkNotNull(configs, "Configuration should not be null"));
+        return ActualHttpServer.createQuietServer(port, requireNonNull(configs, "Configuration should not be null"));
     }
 
     public static HttpServer httpServer(final int port, final MocoMonitor monitor, final MocoConfig<?>... configs) {
         checkArgument(port > 0, "Port must be greater than zero");
         return ActualHttpServer.createHttpServerWithMonitor(port,
-                checkNotNull(monitor, "Monitor should not be null"),
-                checkNotNull(configs, "Configuration should not be null"));
+                requireNonNull(monitor, "Monitor should not be null"),
+                requireNonNull(configs, "Configuration should not be null"));
     }
 
     public static HttpServer httpServer(final int port, final MocoMonitor monitor, final MocoMonitor monitor2,
                                         final MocoMonitor... monitors) {
         checkArgument(port > 0, "Port must be greater than zero");
         return ActualHttpServer.createHttpServerWithMonitor(port,
-                ApiUtils.mergeMonitor(checkNotNull(monitor, "Monitor should not be null"),
-                        checkNotNull(monitor2, "Monitor should not be null"),
-                        checkNotNull(monitors, "Monitors should not be null")));
+                ApiUtils.mergeMonitor(requireNonNull(monitor, "Monitor should not be null"),
+                        requireNonNull(monitor2, "Monitor should not be null"),
+                        requireNonNull(monitors, "Monitors should not be null")));
     }
 
     public static HttpServer httpServer(final MocoConfig<?>... configs) {
         return ActualHttpServer.createQuietServer(0,
-                checkNotNull(configs, "Configuration should not be null"));
+                requireNonNull(configs, "Configuration should not be null"));
     }
 
     public static HttpServer httpServer(final MocoMonitor monitor, final MocoConfig<?>... configs) {
-        return ActualHttpServer.createHttpServerWithMonitor(0, checkNotNull(monitor, "Monitor should not be null"),
-                checkNotNull(configs, "Configuration should not be null"));
+        return ActualHttpServer.createHttpServerWithMonitor(0, requireNonNull(monitor, "Monitor should not be null"),
+                requireNonNull(configs, "Configuration should not be null"));
     }
 
     public static HttpsServer httpsServer(final int port, final HttpsCertificate certificate, final MocoConfig<?>... configs) {
         checkArgument(port > 0, "Port must be greater than zero");
-        return ActualHttpServer.createHttpsQuietServer(port, checkNotNull(certificate, "Certificate should not be null"),
-                checkNotNull(configs, "Configuration should not be null"));
+        return ActualHttpServer.createHttpsQuietServer(port, requireNonNull(certificate, "Certificate should not be null"),
+                requireNonNull(configs, "Configuration should not be null"));
     }
 
     public static HttpsServer httpsServer(final int port, final HttpsCertificate certificate, final MocoMonitor monitor, final MocoConfig<?>... configs) {
         checkArgument(port > 0, "Port must be greater than zero");
         return ActualHttpServer.createHttpsServerWithMonitor(port,
-                checkNotNull(certificate, "Certificate should not be null"),
-                checkNotNull(monitor, "Monitor should not be null"),
-                checkNotNull(configs, "Configuration should not be null"));
+                requireNonNull(certificate, "Certificate should not be null"),
+                requireNonNull(monitor, "Monitor should not be null"),
+                requireNonNull(configs, "Configuration should not be null"));
     }
 
     public static HttpsServer httpsServer(final HttpsCertificate certificate, final MocoConfig<?>... configs) {
-        return ActualHttpServer.createHttpsQuietServer(0, checkNotNull(certificate, "Certificate should not be null"),
-                checkNotNull(configs, "Configuration should not be null"));
+        return ActualHttpServer.createHttpsQuietServer(0, requireNonNull(certificate, "Certificate should not be null"),
+                requireNonNull(configs, "Configuration should not be null"));
     }
 
     public static HttpsServer httpsServer(final HttpsCertificate certificate, final MocoMonitor monitor, final MocoConfig<?>... configs) {
         return ActualHttpServer.createHttpsServerWithMonitor(0,
-                checkNotNull(certificate, "Certificate should not be null"),
-                checkNotNull(monitor, "Monitor should not be null"),
-                checkNotNull(configs, "Configuration should not be null"));
+                requireNonNull(certificate, "Certificate should not be null"),
+                requireNonNull(monitor, "Monitor should not be null"),
+                requireNonNull(configs, "Configuration should not be null"));
     }
 
     public static HttpServer httpsServer(final int port, final HttpsCertificate certificate, final MocoMonitor monitor, final MocoMonitor monitor2, final MocoMonitor... monitors) {
         checkArgument(port > 0, "Port must be greater than zero");
-        return ActualHttpServer.createHttpsServerWithMonitor(port, checkNotNull(certificate, "Certificate should not be null"),
-                ApiUtils.mergeMonitor(checkNotNull(monitor, "Monitor should not be null"),
-                        checkNotNull(monitor2, "Monitor should not be null"),
-                        checkNotNull(monitors, "Monitors should not be null")));
+        return ActualHttpServer.createHttpsServerWithMonitor(port, requireNonNull(certificate, "Certificate should not be null"),
+                ApiUtils.mergeMonitor(requireNonNull(monitor, "Monitor should not be null"),
+                        requireNonNull(monitor2, "Monitor should not be null"),
+                        requireNonNull(monitors, "Monitors should not be null")));
     }
 
     public static MocoConfig<?> context(final String context) {
@@ -141,17 +141,16 @@ public final class Moco {
     }
 
     public static MocoConfig<?> request(final RequestMatcher matcher) {
-        return new MocoRequestConfig(checkNotNull(matcher, "Request matcher should not be null"));
+        return new MocoRequestConfig(requireNonNull(matcher, "Request matcher should not be null"));
     }
 
     public static MocoConfig<?> response(final ResponseHandler handler) {
-        return new MocoResponseConfig(checkNotNull(handler, "Response handler should not be null"));
+        return new MocoResponseConfig(requireNonNull(handler, "Response handler should not be null"));
     }
 
     public static MocoConfig<?> response(final HttpHeader header) {
-        return response(with(checkNotNull(header, "Response handler should not be null")));
+        return response(with(requireNonNull(header, "Response handler should not be null")));
     }
-
 
     public static MocoConfig<?> fileRoot(final String fileRoot) {
         return new MocoFileRootConfig(checkNotNullOrEmpty(fileRoot, "File root should not be null"));
@@ -166,7 +165,7 @@ public final class Moco {
     }
 
     public static MocoMonitor log(final String filename, final Charset charset) {
-        return ApiUtils.log(ApiUtils.fileLogWriter(checkNotNullOrEmpty(filename, "Filename should not be null or empty"), checkNotNull(charset, "Charset should not be null")));
+        return ApiUtils.log(ApiUtils.fileLogWriter(checkNotNullOrEmpty(filename, "Filename should not be null or empty"), requireNonNull(charset, "Charset should not be null")));
     }
 
     public static RequestMatcher by(final String content) {
@@ -174,118 +173,118 @@ public final class Moco {
     }
 
     public static RequestMatcher by(final Resource resource) {
-        checkNotNull(resource, "Resource should not be null");
+        requireNonNull(resource, "Resource should not be null");
         return ApiUtils.by(extractor(resource.id()), resource);
     }
 
     public static RequestMatcher struct(final Resource resource) {
-        checkNotNull(resource, "Resource should not be null");
+        requireNonNull(resource, "Resource should not be null");
         return ApiUtils.struct(extractor(resource.id()), resource);
     }
 
     public static <T> RequestMatcher eq(final RequestExtractor<T> extractor, final String expected) {
-        return eq(checkNotNull(extractor, "Extractor should not be null"), text(checkNotNull(expected, "Expected content should not be null")));
+        return eq(requireNonNull(extractor, "Extractor should not be null"), text(requireNonNull(expected, "Expected content should not be null")));
     }
 
     public static <T> RequestMatcher eq(final RequestExtractor<T> extractor, final Resource expected) {
-        return new EqRequestMatcher<>(checkNotNull(extractor, "Extractor should not be null"), checkNotNull(expected, "Expected content should not be null"));
+        return new EqRequestMatcher<>(requireNonNull(extractor, "Extractor should not be null"), requireNonNull(expected, "Expected content should not be null"));
     }
 
     public static RequestMatcher match(final Resource resource) {
-        return ApiUtils.match(extractor(resource.id()), checkNotNull(resource, "Resource should not be null"));
+        return ApiUtils.match(extractor(resource.id()), requireNonNull(resource, "Resource should not be null"));
     }
 
     public static <T> RequestMatcher match(final RequestExtractor<T> extractor, final String expected) {
-        return ApiUtils.match(checkNotNull(extractor, "Extractor should not be null"), text(checkNotNullOrEmpty(expected, "Expected content should not be null")));
+        return ApiUtils.match(requireNonNull(extractor, "Extractor should not be null"), text(checkNotNullOrEmpty(expected, "Expected content should not be null")));
     }
 
     public static RequestMatcher path(final Resource resource) {
-        return ApiUtils.path(extractor(resource.id()), checkNotNull(resource, "Resource should not be null"));
+        return ApiUtils.path(extractor(resource.id()), requireNonNull(resource, "Resource should not be null"));
     }
 
     public static <T> RequestMatcher exist(final RequestExtractor<T> extractor) {
-        return new ExistMatcher<>(checkNotNull(extractor, "Extractor should not be null"));
+        return new ExistMatcher<>(requireNonNull(extractor, "Extractor should not be null"));
     }
 
     public static RequestMatcher startsWith(final Resource resource) {
-        return ApiUtils.startsWith(extractor(resource.id()), checkNotNull(resource, "Resource should not be null"));
+        return ApiUtils.startsWith(extractor(resource.id()), requireNonNull(resource, "Resource should not be null"));
     }
 
     public static <T> RequestMatcher startsWith(final RequestExtractor<T> extractor, final String expected) {
-        return ApiUtils.startsWith(checkNotNull(extractor, "Extractor should not be null"),
+        return ApiUtils.startsWith(requireNonNull(extractor, "Extractor should not be null"),
                 text(checkNotNullOrEmpty(expected, "Expected resource should not be null")));
     }
 
     public static RequestMatcher endsWith(final Resource resource) {
-        return ApiUtils.endsWith(extractor(resource.id()), checkNotNull(resource, "Resource should not be null"));
+        return ApiUtils.endsWith(extractor(resource.id()), requireNonNull(resource, "Resource should not be null"));
     }
 
     public static <T> RequestMatcher endsWith(final RequestExtractor<T> extractor, final String expected) {
-        return ApiUtils.endsWith(checkNotNull(extractor, "Extractor should not be null"),
+        return ApiUtils.endsWith(requireNonNull(extractor, "Extractor should not be null"),
                 text(checkNotNullOrEmpty(expected, "Expected resource should not be null")));
     }
 
     public static RequestMatcher contain(final Resource resource) {
-        return ApiUtils.contain(extractor(resource.id()), checkNotNull(resource, "Resource should not be null"));
+        return ApiUtils.contain(extractor(resource.id()), requireNonNull(resource, "Resource should not be null"));
     }
 
     public static <T> RequestMatcher contain(final RequestExtractor<T> extractor, final String expected) {
-        return ApiUtils.contain(checkNotNull(extractor, "Extractor should not be null"),
+        return ApiUtils.contain(requireNonNull(extractor, "Extractor should not be null"),
                 text(checkNotNullOrEmpty(expected, "Expected resource should not be null")));
     }
 
     public static RequestMatcher and(final RequestMatcher matcher, final RequestMatcher... matchers) {
         return new AndRequestMatcher(asIterable(
-                checkNotNull(matcher, "Matcher should not be null"),
-                checkNotNull(matchers, "Matcher should not be null")));
+                requireNonNull(matcher, "Matcher should not be null"),
+                requireNonNull(matchers, "Matcher should not be null")));
     }
 
     public static ResponseHandler and(final ResponseElement element, final ResponseElement... elements) {
         return AndResponseHandler.and(
-                checkNotNull(element, "Response should not be null"),
-                checkNotNull(elements, "Responses should not be null"));
+                requireNonNull(element, "Response should not be null"),
+                requireNonNull(elements, "Responses should not be null"));
     }
 
     public static RequestMatcher or(final RequestMatcher matcher, final RequestMatcher... matchers) {
         return new OrRequestMatcher(asIterable(
-                checkNotNull(matcher, "Matcher should not be null"),
-                checkNotNull(matchers, "Matcher should not be null")));
+                requireNonNull(matcher, "Matcher should not be null"),
+                requireNonNull(matchers, "Matcher should not be null")));
     }
 
     public static RequestMatcher not(final RequestMatcher matcher) {
-        return new NotRequestMatcher(checkNotNull(matcher, "Expected matcher should not be null"));
+        return new NotRequestMatcher(requireNonNull(matcher, "Expected matcher should not be null"));
     }
 
     public static ContentResource text(final String text) {
-        checkNotNull(text, "Text should not be null");
+        requireNonNull(text, "Text should not be null");
         return text((request) -> text);
     }
 
     public static ContentResource text(final Function<Request, String> function) {
-        return textResource(checkNotNull(function, "Text function should not be null"));
+        return textResource(requireNonNull(function, "Text function should not be null"));
     }
 
     public static ContentResource binary(final byte[] binary) {
-        checkNotNull(binary, "Binary should not be null");
+        requireNonNull(binary, "Binary should not be null");
         return binary((request) -> binary);
     }
 
     public static ContentResource binary(final ByteBuffer buffer) {
-        checkNotNull(buffer, "Binary should not be null");
+        requireNonNull(buffer, "Binary should not be null");
         return binary(buffer.array());
     }
 
     public static ContentResource binary(final InputStream stream) {
-        checkNotNull(stream, "Binary stream should not be null");
+        requireNonNull(stream, "Binary stream should not be null");
         return binary((request) -> stream);
     }
 
     public static ContentResource binary(final Function<Request, Object> function) {
-        return binaryResource(checkNotNull(function, "Binary function should not be null"));
+        return binaryResource(requireNonNull(function, "Binary function should not be null"));
     }
 
     public static ResponseHandler with(final ResponseElement element) {
-        return responseHandler(checkNotNull(element, "Response element should not be null"));
+        return responseHandler(requireNonNull(element, "Response element should not be null"));
     }
 
     public static ResponseHandler with(final String text) {
@@ -301,7 +300,7 @@ public final class Moco {
     }
 
     public static Resource method(final HttpMethod httpMethod) {
-        return methodResource(checkNotNull(httpMethod, "HTTP method should not be null").toString());
+        return methodResource(requireNonNull(httpMethod, "HTTP method should not be null").toString());
     }
 
     public static RequestExtractor<String[]> header(final String header) {
@@ -310,12 +309,12 @@ public final class Moco {
 
     public static HttpHeader header(final String name, final String value) {
         return new HttpHeader(checkNotNullOrEmpty(checkNotNullOrEmpty(name, "Header name should not be null"), "Header name should not be null"),
-                checkNotNull((Resource) text(checkNotNullOrEmpty(value, "Header value should not be null")), "Header value should not be null"));
+                requireNonNull((Resource) text(checkNotNullOrEmpty(value, "Header value should not be null")), "Header value should not be null"));
     }
 
     public static HttpHeader header(final String name, final Resource value) {
         return new HttpHeader(checkNotNullOrEmpty(checkNotNullOrEmpty(name, "Header name should not be null"), "Header name should not be null"),
-                checkNotNull(checkNotNull(value, "Header value should not be null"), "Header value should not be null"));
+                requireNonNull(requireNonNull(value, "Header value should not be null"), "Header value should not be null"));
     }
 
     public static RequestExtractor<String> cookie(final String key) {
@@ -325,14 +324,14 @@ public final class Moco {
     public static ResponseHandler cookie(final String key, final String value, final CookieAttribute... attributes) {
         return cookie(checkNotNullOrEmpty(key, "Cookie key should not be null"),
                 text(checkNotNullOrEmpty(value, "Cookie value should not be null")),
-                checkNotNull(attributes, "Cookie options should not be null"));
+                requireNonNull(attributes, "Cookie options should not be null"));
     }
 
     public static ResponseHandler cookie(final String key, final Resource resource, final CookieAttribute... attributes) {
         return with(header(SET_COOKIE, cookieResource(
                 checkNotNullOrEmpty(key, "Cookie key should not be null"),
-                checkNotNull(resource, "Cookie value should not be null"),
-                checkNotNull(attributes, "Cookie options should not be null"))));
+                requireNonNull(resource, "Cookie value should not be null"),
+                requireNonNull(attributes, "Cookie options should not be null"))));
     }
 
     public static RequestExtractor<String> form(final String key) {
@@ -341,7 +340,7 @@ public final class Moco {
 
     public static LatencyProcedure latency(final long duration, final TimeUnit unit) {
         checkArgument(duration > 0, "Latency must be greater than zero");
-        return new LatencyProcedure(duration, checkNotNull(unit, "Time unit should not be null"));
+        return new LatencyProcedure(duration, requireNonNull(unit, "Time unit should not be null"));
     }
 
     public static RequestExtractor<String[]> query(final String param) {
@@ -357,7 +356,7 @@ public final class Moco {
     }
 
     public static ContentResource xml(final Resource resource) {
-        checkNotNull(resource, "Resource should not be null");
+        requireNonNull(resource, "Resource should not be null");
         return xmlResource((request) -> resource);
     }
 
@@ -366,16 +365,16 @@ public final class Moco {
     }
 
     public static ContentResource json(final Resource resource) {
-        checkNotNull(resource, "Json should not be null");
+        requireNonNull(resource, "Json should not be null");
         return json((request) -> resource);
     }
 
     public static ContentResource json(final Function<Request, Object> function) {
-        return jsonResource(checkNotNull(function, "Json function should not be null"));
+        return jsonResource(requireNonNull(function, "Json function should not be null"));
     }
 
     public static ContentResource json(final Object pojo) {
-        checkNotNull(pojo, "Json object should not be null");
+        requireNonNull(pojo, "Json object should not be null");
         return json((request) -> pojo);
     }
 
@@ -384,37 +383,37 @@ public final class Moco {
     }
 
     public static ResponseHandler seq(final String content, final String... contents) {
-        checkNotNull(content, "Sequence content should not be null");
+        requireNonNull(content, "Sequence content should not be null");
         checkArgument(contents.length > 0, "Sequence content should not be null");
         return newSeq(asIterable(content, contents).stream().map(textToResource()).toList());
     }
 
     public static ResponseHandler seq(final Resource content, final Resource... contents) {
-        checkNotNull(content, "Sequence content should not be null");
+        requireNonNull(content, "Sequence content should not be null");
         checkArgument(contents.length > 0, "Sequence contents should not be null");
         return newSeq(asIterable(content, contents).stream().map(Moco::with).toList());
     }
 
     public static ResponseHandler seq(final ResponseHandler handler, final ResponseHandler... handlers) {
-        checkNotNull(handler, "Sequence handler should not be null");
+        requireNonNull(handler, "Sequence handler should not be null");
         checkArgument(handlers.length > 0, "Sequence handlers should not be null");
         return newSeq(asIterable(handler, handlers));
     }
 
     public static ResponseHandler cycle(final String content, final String... contents) {
-        checkNotNull(content, "Cycle content should not be null");
+        requireNonNull(content, "Cycle content should not be null");
         checkArgument(contents.length > 0, "Cycle content should not be null");
         return newCycle(asIterable(content, contents).stream().map(textToResource()).toList());
     }
 
     public static ResponseHandler cycle(final Resource content, final Resource... contents) {
-        checkNotNull(content, "Cycle content should not be null");
+        requireNonNull(content, "Cycle content should not be null");
         checkArgument(contents.length > 0, "Cycle contents should not be null");
         return newCycle(asIterable(content, contents).stream().map(Moco::with).toList());
     }
 
     public static ResponseHandler cycle(final ResponseHandler handler, final ResponseHandler... handlers) {
-        checkNotNull(handler, "Cycle handler should not be null");
+        requireNonNull(handler, "Cycle handler should not be null");
         checkArgument(handlers.length > 0, "Cycle handlers should not be null");
         return newCycle(asIterable(handler, handlers));
     }
@@ -424,15 +423,15 @@ public final class Moco {
     }
 
     public static ContentResource file(final Resource filename) {
-        return ApiUtils.file(checkNotNull(filename, "Filename should not be null"), null);
+        return ApiUtils.file(requireNonNull(filename, "Filename should not be null"), null);
     }
 
     public static ContentResource file(final String filename, final Charset charset) {
-        return ApiUtils.file(text(checkNotNullOrEmpty(filename, "Filename should not be null")), checkNotNull(charset, "Charset should not be null"));
+        return ApiUtils.file(text(checkNotNullOrEmpty(filename, "Filename should not be null")), requireNonNull(charset, "Charset should not be null"));
     }
 
     public static ContentResource file(final Resource filename, final Charset charset) {
-        return ApiUtils.file(checkNotNull(filename, "Filename should not be null"), checkNotNull(charset, "Charset should not be null"));
+        return ApiUtils.file(requireNonNull(filename, "Filename should not be null"), requireNonNull(charset, "Charset should not be null"));
     }
 
     public static ContentResource pathResource(final String filename) {
@@ -440,15 +439,15 @@ public final class Moco {
     }
 
     public static ContentResource pathResource(final Resource filename) {
-        return ApiUtils.pathResource(checkNotNull(filename, "Filename should not be null"), null);
+        return ApiUtils.pathResource(requireNonNull(filename, "Filename should not be null"), null);
     }
 
     public static ContentResource pathResource(final String filename, final Charset charset) {
-        return ApiUtils.pathResource(text(checkNotNullOrEmpty(filename, "Filename should not be null")), checkNotNull(charset, "Charset should not be null"));
+        return ApiUtils.pathResource(text(checkNotNullOrEmpty(filename, "Filename should not be null")), requireNonNull(charset, "Charset should not be null"));
     }
 
     public static ContentResource pathResource(final Resource filename, final Charset charset) {
-        return ApiUtils.pathResource(checkNotNull(filename, "Filename should not be null"), checkNotNull(charset, "Charset should not be null"));
+        return ApiUtils.pathResource(requireNonNull(filename, "Filename should not be null"), requireNonNull(charset, "Charset should not be null"));
     }
 
     public static Resource version(final String version) {
@@ -456,11 +455,11 @@ public final class Moco {
     }
 
     public static Resource version(final Resource resource) {
-        return versionResource(checkNotNull(resource, "Version should not be null"));
+        return versionResource(requireNonNull(resource, "Version should not be null"));
     }
 
     public static Resource version(final HttpProtocolVersion version) {
-        return versionResource(checkNotNull(version, "Version should not be null"));
+        return versionResource(requireNonNull(version, "Version should not be null"));
     }
 
     public static ResponseHandler status(final int code) {
@@ -473,25 +472,25 @@ public final class Moco {
     }
 
     public static ResponseHandler proxy(final ContentResource url) {
-        return proxy(checkNotNull(url, "URL should not be null"), Failover.DEFAULT_FAILOVER);
+        return proxy(requireNonNull(url, "URL should not be null"), Failover.DEFAULT_FAILOVER);
     }
 
     public static ResponseHandler proxy(final String url, final Failover failover) {
         return proxy(text(checkNotNullOrEmpty(url, "URL should not be null")),
-                checkNotNull(failover, "Failover should not be null"));
+                requireNonNull(failover, "Failover should not be null"));
     }
 
     public static ResponseHandler proxy(final ContentResource url, final Failover failover) {
-        return new ProxyResponseHandler(toUrlFunction(checkNotNull(url, "URL should not be null")),
-                checkNotNull(failover, "Failover should not be null"));
+        return new ProxyResponseHandler(toUrlFunction(requireNonNull(url, "URL should not be null")),
+                requireNonNull(failover, "Failover should not be null"));
     }
 
     public static ResponseHandler proxy(final ProxyConfig proxyConfig) {
-        return proxy(checkNotNull(proxyConfig), Failover.DEFAULT_FAILOVER);
+        return proxy(requireNonNull(proxyConfig), Failover.DEFAULT_FAILOVER);
     }
 
     public static ResponseHandler proxy(final ProxyConfig proxyConfig, final Failover failover) {
-        return new ProxyBatchResponseHandler(checkNotNull(proxyConfig), checkNotNull(failover));
+        return new ProxyBatchResponseHandler(requireNonNull(proxyConfig), requireNonNull(failover));
     }
 
     public static ProxyConfig.Builder from(final String localBase) {
@@ -517,17 +516,17 @@ public final class Moco {
     }
 
     public static ContentResource template(final ContentResource resource) {
-        return template(checkNotNull(resource, "Template should not be null"), ImmutableMap.of());
+        return template(requireNonNull(resource, "Template should not be null"), Map.of());
     }
 
     public static ContentResource template(final ContentResource template, final String name, final String value) {
-        return template(checkNotNull(template, "Template should not be null"),
+        return template(requireNonNull(template, "Template should not be null"),
                 checkNotNullOrEmpty(name, "Template variable name should not be null"),
                 var(checkNotNullOrEmpty(value, "Template variable value should not be null")));
     }
 
     public static ContentResource template(final ContentResource template, final String name1, final String value1, final String name2, final String value2) {
-        return template(checkNotNull(template, "Template should not be null"),
+        return template(requireNonNull(template, "Template should not be null"),
                 checkNotNullOrEmpty(name1, "Template variable name should not be null"),
                 var(checkNotNullOrEmpty(value1, "Template variable value should not be null")),
                 checkNotNullOrEmpty(name2, "Template variable name should not be null"),
@@ -537,130 +536,130 @@ public final class Moco {
     public static <T> ContentResource template(final String template, final String name, final RequestExtractor<T> extractor) {
         return template(text(checkNotNullOrEmpty(template, "Template should not be null")),
                 checkNotNullOrEmpty(name, "Template variable name should not be null"),
-                checkNotNull(extractor, "Template variable extractor should not be null"));
+                requireNonNull(extractor, "Template variable extractor should not be null"));
     }
 
     public static <ExtractorType1, ExtractorType2> ContentResource template(final String template, final String name1, final RequestExtractor<ExtractorType1> extractor1,
                                                                             final String name2, final RequestExtractor<ExtractorType2> extractor2) {
         return template(text(checkNotNullOrEmpty(template, "Template should not be null")),
                 checkNotNullOrEmpty(name1, "Template variable name should not be null"),
-                checkNotNull(extractor1, "Template variable extractor should not be null"),
+                requireNonNull(extractor1, "Template variable extractor should not be null"),
                 checkNotNullOrEmpty(name2, "Template variable name should not be null"),
-                checkNotNull(extractor2, "Template variable extractor should not be null"));
+                requireNonNull(extractor2, "Template variable extractor should not be null"));
     }
 
     public static <T> ContentResource template(final ContentResource template, final String name, final RequestExtractor<T> extractor) {
-        return templateResource(checkNotNull(template, "Template should not be null"),
-                ImmutableMap.of(checkValidVariableName(name),
-                        new ExtractorVariable<>(checkNotNull(extractor, "Template variable extractor should not be null")))
+        return templateResource(requireNonNull(template, "Template should not be null"),
+                Map.of(checkValidVariableName(name),
+                        new ExtractorVariable<>(requireNonNull(extractor, "Template variable extractor should not be null")))
         );
     }
 
     public static <ExtractorType1, ExtractorType2> ContentResource template(final ContentResource template, final String name1, final RequestExtractor<ExtractorType1> extractor1,
                                                                             final String name2, final RequestExtractor<ExtractorType2> extractor2) {
-        return templateResource(checkNotNull(template, "Template should not be null"),
-                ImmutableMap.of(checkValidVariableName(name1),
-                        new ExtractorVariable<>(checkNotNull(extractor1, "Template variable extractor should not be null")),
+        return templateResource(requireNonNull(template, "Template should not be null"),
+                Map.of(checkValidVariableName(name1),
+                        new ExtractorVariable<>(requireNonNull(extractor1, "Template variable extractor should not be null")),
                         checkValidVariableName(name2),
-                        new ExtractorVariable<>(checkNotNull(extractor2, "Template variable extractor should not be null")))
+                        new ExtractorVariable<>(requireNonNull(extractor2, "Template variable extractor should not be null")))
         );
     }
 
     public static ContentResource template(final String template,
-                                           final ImmutableMap<String, ? extends RequestExtractor<?>> variables) {
-        return template(text(checkNotNull(template, "Template should not be null")),
-                checkNotNull(variables, "Template variable should not be null"));
+                                           final Map<String, ? extends RequestExtractor<?>> variables) {
+        return template(text(requireNonNull(template, "Template should not be null")),
+                requireNonNull(variables, "Template variable should not be null"));
     }
 
     public static ContentResource template(final ContentResource template,
-                                           final ImmutableMap<String, ? extends RequestExtractor<?>> variables) {
-        return templateResource(checkNotNull(template, "Template should not be null"),
-                ApiUtils.toVariables(checkNotNull(variables, "Template variable should not be null")));
+                                           final Map<String, ? extends RequestExtractor<?>> variables) {
+        return templateResource(requireNonNull(template, "Template should not be null"),
+                ApiUtils.toVariables(requireNonNull(variables, "Template variable should not be null")));
     }
 
     public static RequestExtractor<Object> var(final Function<Request, Object> supplier) {
-        return new FunctionExtractor<>(checkNotNull(supplier, "Template variable should not be null or empty"));
+        return new FunctionExtractor<>(requireNonNull(supplier, "Template variable should not be null or empty"));
     }
 
     public static RequestExtractor<Object> var(final Object obj) {
-        checkNotNull(obj, "Template variable should not be null or empty");
+        requireNonNull(obj, "Template variable should not be null or empty");
         return var((request) -> obj);
     }
 
     public static Failover failover(final String file, final int... statuses) {
         return new Failover(ApiUtils.failoverExecutor(
                 checkNotNullOrEmpty(file, "Failover filename should not be null")), FailoverStrategy.FAILOVER,
-                checkNotNull(statuses, "Proxy status should not be null"));
+                requireNonNull(statuses, "Proxy status should not be null"));
     }
 
     public static Failover playback(final String file, final int... statuses) {
         return new Failover(ApiUtils.failoverExecutor(
                 checkNotNullOrEmpty(file, "Playback filename should not be null")), FailoverStrategy.PLAYBACK,
-                checkNotNull(statuses, "Proxy status should not be null"));
+                requireNonNull(statuses, "Proxy status should not be null"));
     }
 
     public static MocoEventTrigger complete(final MocoEventAction action) {
-        return new MocoEventTrigger(MocoEvent.COMPLETE, checkNotNull(action, "Action should not be null"));
+        return new MocoEventTrigger(MocoEvent.COMPLETE, requireNonNull(action, "Action should not be null"));
     }
 
     private static final int DEFAULT_LATENCY = 1000;
 
     public static MocoEventAction async(final MocoEventAction action) {
-        return async(checkNotNull(action, "Action should not be null"),
+        return async(requireNonNull(action, "Action should not be null"),
                 latency(DEFAULT_LATENCY, TimeUnit.MILLISECONDS));
     }
 
     public static MocoEventAction async(final MocoEventAction action, final LatencyProcedure procedure) {
-        return new MocoAsyncAction(checkNotNull(action, "Action should not be null"),
-                checkNotNull(procedure, "Procedure should not be null"));
+        return new MocoAsyncAction(requireNonNull(action, "Action should not be null"),
+                requireNonNull(procedure, "Procedure should not be null"));
     }
 
     public static MocoEventAction get(final String url, final HttpHeader... headers) {
         return get(text(checkNotNullOrEmpty(url, "URL should not be null")),
-                checkNotNull(headers, "Headers should not be null"));
+                requireNonNull(headers, "Headers should not be null"));
     }
 
     public static MocoEventAction get(final Resource url, final HttpHeader... headers) {
-        return new MocoGetRequestAction(checkNotNull(url, "URL should not be null"),
-                checkNotNull(headers, "Headers should not be null"));
+        return new MocoGetRequestAction(requireNonNull(url, "URL should not be null"),
+                requireNonNull(headers, "Headers should not be null"));
     }
 
     public static MocoEventAction post(final Resource url, final ContentResource content, final HttpHeader... headers) {
-        return new MocoPostRequestAction(checkNotNull(url, "URL should not be null"),
-                checkNotNull(content, "Content should not be null"),
-                checkNotNull(headers, "Headers should not be null"));
+        return new MocoPostRequestAction(requireNonNull(url, "URL should not be null"),
+                requireNonNull(content, "Content should not be null"),
+                requireNonNull(headers, "Headers should not be null"));
     }
 
     public static MocoEventAction post(final String url, final ContentResource content, final HttpHeader... headers) {
         return post(text(checkNotNullOrEmpty(url, "URL should not be null")),
-                checkNotNull(content, "Content should not be null"),
-                checkNotNull(headers, "Headers should not be null"));
+                requireNonNull(content, "Content should not be null"),
+                requireNonNull(headers, "Headers should not be null"));
     }
 
     public static MocoEventAction post(final String url, final String content, final HttpHeader... headers) {
         return post(checkNotNullOrEmpty(url, "URL should not be null"), text(checkNotNullOrEmpty(content, "Content should not be null")),
-                checkNotNull(headers, "Headers should not be null"));
+                requireNonNull(headers, "Headers should not be null"));
     }
 
     public static MocoEventAction post(final Resource url, final String content, final HttpHeader... headers) {
-        return post(checkNotNull(url, "URL should not be null"), text(checkNotNullOrEmpty(content, "Content should not be null")),
-                checkNotNull(headers, "Headers should not be null"));
+        return post(requireNonNull(url, "URL should not be null"), text(checkNotNullOrEmpty(content, "Content should not be null")),
+                requireNonNull(headers, "Headers should not be null"));
     }
 
     public static MocoEventAction post(final Resource url, final Object object, final HttpHeader... headers) {
-        return post(checkNotNull(url, "URL should not be null"),
-                Jsons.toJson(checkNotNull(object, "Content should not be null")),
-                checkNotNull(headers, "Headers should not be null"));
+        return post(requireNonNull(url, "URL should not be null"),
+                Jsons.toJson(requireNonNull(object, "Content should not be null")),
+                requireNonNull(headers, "Headers should not be null"));
     }
 
     public static ResponseHandler attachment(final String filename, final Resource resource) {
         return AndResponseHandler.and(
                 with(header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=%s".formatted(checkNotNullOrEmpty(filename, "Filename should not be null or empty")))),
-                with(checkNotNull(resource, "Resource should not be null")));
+                with(requireNonNull(resource, "Resource should not be null")));
     }
 
     public static ResponseHandler join(final MocoGroup group) {
-        return new JoinResponseHandler(checkNotNull(group, "group should not be empty"));
+        return new JoinResponseHandler(requireNonNull(group, "group should not be empty"));
     }
 
     public static MocoGroup group(final String name) {
@@ -668,7 +667,7 @@ public final class Moco {
     }
 
     public static RequestMatcher conditional(final Predicate<Request> predicate) {
-        return new ConditionalRequestMatcher(checkNotNull(predicate, "Predicate should not be null"));
+        return new ConditionalRequestMatcher(requireNonNull(predicate, "Predicate should not be null"));
     }
 
     private Moco() {
