@@ -2,10 +2,7 @@ package com.github.dreamhead.moco.model;
 
 import com.github.dreamhead.moco.HttpMessage;
 import com.github.dreamhead.moco.HttpProtocolVersion;
-import com.google.common.base.MoreObjects;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Iterables;
-import com.google.common.reflect.TypeToken;
+import com.github.dreamhead.moco.util.ToStringHelper;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -15,16 +12,16 @@ import java.util.Map;
 import static com.github.dreamhead.moco.model.MessageContent.content;
 import static com.github.dreamhead.moco.util.Maps.iterableValueToArray;
 import static com.github.dreamhead.moco.util.Maps.simpleValueToArray;
-import static com.google.common.collect.ImmutableMap.copyOf;
+import static com.github.dreamhead.moco.util.Maps.orderedCopyOf;
 
 public abstract class DefaultHttpMessage implements HttpMessage {
     private final HttpProtocolVersion version;
     private final MessageContent content;
-    private final ImmutableMap<String, String[]> headers;
+    private final Map<String, String[]> headers;
 
     protected DefaultHttpMessage(final HttpProtocolVersion version,
                                  final MessageContent content,
-                                 final ImmutableMap<String, String[]> headers) {
+                                 final Map<String, String[]> headers) {
         this.version = version;
         this.content = content;
         this.headers = headers;
@@ -36,7 +33,7 @@ public abstract class DefaultHttpMessage implements HttpMessage {
     }
 
     @Override
-    public final ImmutableMap<String, String[]> getHeaders() {
+    public final Map<String, String[]> getHeaders() {
         return this.headers;
     }
 
@@ -55,8 +52,8 @@ public abstract class DefaultHttpMessage implements HttpMessage {
         return this.content;
     }
 
-    protected MoreObjects.ToStringHelper toStringHelper() {
-        return MoreObjects.toStringHelper(this)
+    protected ToStringHelper toStringHelper() {
+        return ToStringHelper.of(this)
                 .omitNullValues()
                 .add("version", this.version)
                 .add("headers", this.headers)
@@ -100,7 +97,7 @@ public abstract class DefaultHttpMessage implements HttpMessage {
 
         @SuppressWarnings("unchecked")
         protected Builder() {
-            this.clazz = (Class<T>) TypeToken.of(getClass()).getRawType();
+            this.clazz = (Class<T>) getClass();
         }
 
         private T self() {
@@ -133,10 +130,10 @@ public abstract class DefaultHttpMessage implements HttpMessage {
         @SuppressWarnings("unchecked")
         private Map<String, String[]> asHeaders(final Map<String, ?> headers) {
             if (headers.isEmpty()) {
-                return ImmutableMap.of();
+                return Map.of();
             }
 
-            Object value = Iterables.getFirst(headers.entrySet(), null).getValue();
+            Object value = headers.entrySet().iterator().next().getValue();
             if (value instanceof String) {
                 return simpleValueToArray((Map<String, String>) headers);
             }
@@ -160,12 +157,12 @@ public abstract class DefaultHttpMessage implements HttpMessage {
             return content;
         }
 
-        protected final ImmutableMap<String, String[]> getHeaders() {
+        protected final Map<String, String[]> getHeaders() {
             if (headers == null) {
-                return ImmutableMap.of();
+                return Map.of();
             }
 
-            return copyOf(headers);
+            return orderedCopyOf(headers);
         }
     }
 }
