@@ -4,10 +4,10 @@ import com.github.dreamhead.moco.HttpRequest;
 import com.github.dreamhead.moco.HttpProtocolVersion;
 import com.github.dreamhead.moco.MocoSse;
 import com.github.dreamhead.moco.sse.SseEvent;
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
 
 import java.util.Iterator;
+import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -31,7 +31,7 @@ public class DefaultMutableHttpResponseTest {
     @Test
     public void should_be_sse_after_setting_events() {
         DefaultMutableHttpResponse response = newResponse();
-        response.setSseEvents(ImmutableList.of(MocoSse.data("Hello")));
+        response.setSseEvents(List.of(MocoSse.data("Hello")));
         assertThat(response.isSse(), is(true));
     }
 
@@ -40,7 +40,7 @@ public class DefaultMutableHttpResponseTest {
         SseEvent event1 = MocoSse.data("Hello");
         SseEvent event2 = MocoSse.event("message", "World");
         DefaultMutableHttpResponse response = newResponse();
-        response.setSseEvents(ImmutableList.of(event1, event2));
+        response.setSseEvents(List.of(event1, event2));
 
         Iterator<SseEvent> events = response.getSseEvents().iterator();
         assertThat(events.next(), is(event1));
